--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
   <div class="hero-mbimg"> 
   </div>
   <div class="hero-cont m-auto">
-      <div class="FillCard col-xxl-4 col-xl-5 col-lg-6 col-md-6 col-12">
-          <h3>The easiest way to take care of your car</h3>
-          <p>Hassle-free MOT, Service and Car Repair</p>
+      <div class="FillCard col-xxl-5 col-xl-5 col-lg-6 col-md-6 col-12">
+          <h3 class="TsHeading-02">The easiest way to take care of your car</h3>
+          <p class="TsDesc-02 py-3">Hassle-free MOT, Service and Car Repair</p>
           <div class="input-div">
               <span class="icon d-flex align-items-center h-100"><svg xmlns="http://www.w3.org/2000/svg"
                       width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -147,7 +147,7 @@
                           d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                       <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                   </svg></span>
-              <input class="w-100" type="text" placeholder="Your Postcode">
+              <input class="w-100 TsDesc-03" type="text" placeholder="Your Postcode">
           </div>
           <div class="input-div">
               <span class="icon d-flex align-items-center h-100"><svg xmlns="http://www.w3.org/2000/svg"
@@ -158,18 +158,16 @@
                           d="M4.819 2A2.5 2.5 0 0 0 2.52 3.515l-.792 1.848a.807.807 0 0 1-.38.404c-.5.25-.855.715-.965 1.262L.05 8.708a2.5 2.5 0 0 0-.049.49v.413c0 .814.39 1.543 1 1.997V13.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1.338c1.292.048 2.745.088 4 .088s2.708-.04 4-.088V13.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1.892c.61-.454 1-1.183 1-1.997v-.413c0-.165-.016-.329-.049-.49l-.335-1.68a1.807 1.807 0 0 0-.964-1.261.807.807 0 0 1-.381-.404l-.792-1.848A2.5 2.5 0 0 0 11.181 2H4.82ZM3.44 3.91A1.5 1.5 0 0 1 4.82 3h6.362a1.5 1.5 0 0 1 1.379.91l.792 1.847a1.8 1.8 0 0 0 .853.904c.222.112.381.32.43.564l.336 1.679c.02.097.029.195.029.294v.413a1.48 1.48 0 0 1-1.408 1.484c-1.555.07-3.786.155-5.592.155-1.806 0-4.037-.084-5.592-.155A1.479 1.479 0 0 1 1 9.611v-.413c0-.099.01-.197.03-.294l.335-1.68a.807.807 0 0 1 .43-.563c.383-.19.685-.511.853-.904l.792-1.848Z" />
                   </svg></span>
 
-              <input class="w-100" type="text" placeholder="Your registration number">
+              <input class="w-100  TsDesc-03" type="text" placeholder="Your registration number">
           </div>
           <div class="input-div">
               <input class="w-100 text-white" type="submit" placeholder="Get an Instant Quote"
                   value="Get an Instant Quote">
           </div>
-
-
-          <a href=""></a>
+ 
           <div class="row ">
-              <div class="col-6">
-                  <a class="TsDesc-03  text-decoration-none me-2" href="#">
+              <div class="col-12 col-lg-6 p-0 text-center">
+                  <a class="TsDesc-04  text-decoration-none me-2" href="#">
                       <span>Great</span>
                   </a>
                   <a class="text-decoration-none me-3" href="">
@@ -206,30 +204,31 @@
                               class="bi bi-star-fill text-success" viewBox="0 0 16 16">
                               <path
                                   d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                          </svg> Trustpilot</span>
+                          </svg>Trustpilot</span>
                   </a>
               </div>
 
-              <div class="col-6">
-                  <p>Insured by</p>
+              <div class="col-12 p-0 text-center col-lg-6">
+                  <p class="TsDesc-02 text-dark-primary-color">Insured by</p>
                   <img src="https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_96,q_auto/v1662467020/contentful/allianz-logo_wv1gt3.png"
                       alt="">
                      
               </div>
              
           </div>
-          <div class="d-flex mt-3 justify-content-between">
-              <img src="..." alt="...">
-              <div>
-                  <p class="p-0 m-0"> Not sure what’s wrong with your car? </p> 
-              <div><a href="#">Speak to our in-house experts</a></div>
+          <div class="d-flex bg-blue p-3 rounded-3 text-center align-center mt-3 justify-content-between">
+              <img width="6.25rem" src="./icon/label_lxops2.svg" alt="...">
+              <div class="d-flex text-start justify-content-center flex-column">
+                  <p class="TsDesc-03 p-0 m-0"> Not sure what’s wrong with your car? </p> 
+              <div><a class="FillCard-btn" href="#">Speak to our in-house experts</a><i class="fas fa-arrow-left"></i></div>
               </div>
           </div>
       </div>
   </div>
-  </div>
+  
+  </div> 
 
-     </section>
+</section>
 
     <!-- OUR WORKS SECTION  -->
     <section class="work m-auto">
@@ -261,7 +260,7 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     <header class="fq-card__header d-flex justify-content-between align-items-center p-1">
-                      <span><img width="50px" class="me-2" src="./icon/accordion_index_1_qijkaf.svg" alt=""></span>
+                      <span><img width="3.125rem" class="me-2" src="./icon/accordion_index_1_qijkaf.svg" alt=""></span>
                       <span class="TsHeading-03">
                         Book online in 2 mins</span>
                       <span>
@@ -287,7 +286,7 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseTow" aria-expanded="false" aria-controls="flush-collapseTow">
                     <header class="fq-card__header d-flex justify-content-between align-items-center p-1">
-                      <span><img width="50px" class="me-2" src="./icon/accordion_index_2_gz3keg.svg" alt=""></span>
+                      <span><img width="3.125rem" class="me-2" src="./icon/accordion_index_2_gz3keg.svg" alt=""></span>
                       <span class="TsHeading-03">We collect your car
                       </span>
                       <span>
@@ -313,7 +312,7 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                     <header class="fq-card__header d-flex justify-content-between align-items-center p-1">
-                      <span><img width="50px" class="me-2" src="./icon/accordion_index_3_wesdz4.svg" alt=""></span>
+                      <span><img width="3.125rem" class="me-2" src="./icon/accordion_index_3_wesdz4.svg" alt=""></span>
                       <span class="TsHeading-03">… And return it to you
                       </span>
                       <span>
@@ -799,7 +798,7 @@
                   both manual and automatic vehicles and pass a criminal
                   background check.
                 </p>
-                <use viewBox="0 0 14 14" width="14px" height="14px" href="#svg-icon-minus" style="color:#B3B6CB"></use>
+                <use viewBox="0 0 14 14" width=".875rem" height=".875rem" href="#svg-icon-minus" style="color:#B3B6CB"></use>
                 <p class="TsDesc-03">
                   Your vehicle will be assigned to a driver who is responsible
                   for collecting it from your home, delivering it to the garage
@@ -926,7 +925,7 @@
                   quotes from the mechanic working on your car. We check every quote to make sure the work is required
                   and has been fairly priced.
                 </p>
-                <use viewBox="0 0 14 14" width="14px" height="14px" href="#svg-icon-minus" style="color:#B3B6CB"></use>
+                <use viewBox="0 0 14 14" width=".875rem" height=".875rem" href="#svg-icon-minus" style="color:#B3B6CB"></use>
                 <p class="TsDesc-03">
                   Note: If you need to update your payment details to pay for your booking, the team will send you a
                   secure link to add the new card details.
@@ -960,7 +959,7 @@
                   the MOT at another garage, we’ll refund you for the original MOT test that you carried out with us.
                   Collection and delivery fees are non-refundable.
                 </p>
-                <use viewBox="0 0 14 14" width="14px" height="14px" href="#svg-icon-minus" style="color:#B3B6CB"></use>
+                <use viewBox="0 0 14 14" width=".875rem" height=".875rem" href="#svg-icon-minus" style="color:#B3B6CB"></use>
 
               </div>
             </div>
@@ -987,7 +986,7 @@
                   If there’s a problem (with either parts or labour) up to 12 months after your booking date, we’ll sort
                   it out for you, completely free of charge.
                 </p>
-                <use viewBox="0 0 14 14" width="14px" height="14px" href="#svg-icon-minus" style="color:#B3B6CB"></use>
+                <use viewBox="0 0 14 14" width=".875rem" height=".875rem" href="#svg-icon-minus" style="color:#B3B6CB"></use>
                 <p class="TsDesc-03">
                   Just email support@fixter.co.uk or call our team on <a href="#"> 0330 808 9527</a>
 
@@ -1022,7 +1021,7 @@
                   If you do for any reason need to cancel your booking, <b>please <a href="#">let us know </a> at least
                     24 hours before your booking date.</b>
                 </p>
-                <use viewBox="0 0 14 14" width="14px" height="14px" href="#svg-icon-minus" style="color:#B3B6CB"></use>
+                <use viewBox="0 0 14 14" width=".875rem" height=".875rem" href="#svg-icon-minus" style="color:#B3B6CB"></use>
                 <p class="TsDesc-03">
                   Cancellation is free when you give at least 24 hours notice. If less than 24 hours notice is given, we
                   charge a cancellation fee of £20.
@@ -1383,17 +1382,17 @@
          prevEl: ".swiper-btn-prev",
        },
        breakpoints: {
-    // when window width is >= 320px
+    // when window width is >= 20rem
     320: {
       slidesPerView: 1,
       spaceBetween: 20
     },
-    // when window width is >= 480px
+    // when window width is >= 30rem
     640: {
       slidesPerView: 2,
       spaceBetween: 30
     },
-    // when window width is >= 640px
+    // when window width is >= 40rem
     992: {
       slidesPerView: 3,
       spaceBetween: 40
