--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="hero-mbimg"> 
   </div>
   <div class="hero-cont m-auto">
-      <div class="FillCard col-xxl-5 col-xl-5 col-lg-6 col-md-6 col-12">
+      <div class="FillCard col-xxl-5 col-xl-5 col-lg-6 col-md-6 col-12"> <div class="p-4 p-md-0">
           <h3 class="TsHeading-02">The easiest way to take care of your car</h3>
           <p class="TsDesc-02 py-3">Hassle-free MOT, Service and Car Repair</p>
           <div class="input-div">
@@ -164,7 +164,7 @@
               <input class="w-100 text-white" type="submit" placeholder="Get an Instant Quote"
                   value="Get an Instant Quote">
           </div>
- 
+ </div>
           <div class="row ">
               <div class="col-12 col-lg-6 p-0 text-center">
                   <a class="TsDesc-04  text-decoration-none me-2" href="#">
@@ -216,17 +216,28 @@
               </div>
              
           </div>
-          <div class="d-flex bg-blue p-3 rounded-3 text-center align-center mt-3 justify-content-between">
-              <img width="6.25rem" src="./icon/label_lxops2.svg" alt="...">
+          <div class="d-flex bg-blue p-4 text-center align-center mt-3 justify-content-between">
+              <img width="100px" src="./icon/label_lxops2.svg" alt="...">
               <div class="d-flex text-start justify-content-center flex-column">
                   <p class="TsDesc-03 p-0 m-0"> Not sure what’s wrong with your car? </p> 
-              <div><a class="FillCard-btn" href="#">Speak to our in-house experts</a><i class="fas fa-arrow-left"></i></div>
+              <div><a class="FillCard-btn " href="#">Speak to our in-house experts</a><i class="fas fa-arrow-right"></i></div>
               </div>
           </div>
       </div>
   </div>
-  
+
   </div> 
+  <div class="bg-blue ">
+  <div class="hero-bage">
+    <div class="col-3">
+<h3>Trusted by 50,000+ people</h3>
+    </div>
+    <div class="col-3"></div>
+    <div class="col-3"></div>
+    <div class="col-3"></div>
+
+  </div>
+</div>
 
 </section>
 
