--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   value="Get an Instant Quote">
           </div>
  </div>
-          <div class="row ">
+          <div class="row py-4">
               <div class="col-12 col-lg-6 p-0 text-center">
                   <a class="TsDesc-04  text-decoration-none me-2" href="#">
                       <span>Great</span>
@@ -227,19 +227,8 @@
   </div>
 
   </div> 
-  <div class="bg-blue ">
-  <div class="hero-bage">
-    <div class="col-3">
-<h3>Trusted by 50,000+ people</h3>
-    </div>
-    <div class="col-3"></div>
-    <div class="col-3"></div>
-    <div class="col-3"></div>
-
-  </div>
-</div>
-
-</section>
+  
+ 
 
     <!-- OUR WORKS SECTION  -->
     <section class="work m-auto">
@@ -1206,8 +1195,8 @@
       <!-- footer section -->
       <section class="TsFooter">
         <div class="m-auto TsFooter-container">
-          <div class="TsFooter-nav d-flex">
-            <div class="col-3">
+          <div class="TsFooter-nav row">
+            <div class="col-lg-3 col-md-6 my-3 my-md-0">
               <div class="row pb-4">
                 <div class="col-12">
                   <h3 class="TsHeading-05">Meet Fixter</h3>
@@ -1257,7 +1246,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6 my-3 my-md-0">
               <h3 class="TsHeading-05">Popular Services</h3>
               <ul class="p-0 nav flex-column">
                 <li class="nav-item">
@@ -1298,7 +1287,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6 my-3 my-md-0">
               <div class="row">
                 <div class="col-12">
                   <h3 class="TsHeading-05">Terms</h3>
@@ -1336,7 +1325,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6 my-3 my-md-0">
               <span><img src="./icon/icon_mastercard_rjsrfx.svg" alt="" /></span>
               <span> <b>In partnership with AXA™ Insurance</b> </span>
             </div>
