--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- css style fixter sheet link  -->
     <link rel="stylesheet" href="./style/fixter.css" />
     <!-- css style footer sheet link  -->
+
     <link rel="stylesheet" href="./style/footer.css" />
     <!-- font awesome cdn link -->
     <script
@@ -27,10 +28,10 @@
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
       ></div>
       <!-- footer section  -->
-      <!-- <section class="TsFooter">
+      <section class="TsFooter">
         <div class="m-auto TsFooter-container">
-          <div class="TsFooter-nav d-flex">
-            <div class="col-3">
+          <div class="TsFooter-nav row">
+            <div class="col-lg-3 col-sm-6 my-4 col-md-0">
               <div class="row pb-4">
                 <div class="col-12">
                   <h3 class="TsHeading-05">Meet Fixter</h3>
@@ -80,7 +81,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-6 my-4 col-md-0">
               <h3 class="TsHeading-05">Popular Services</h3>
               <ul class="p-0 nav flex-column">
                 <li class="nav-item">
@@ -129,7 +130,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-6 my-4 col-md-0">
               <div class="row">
                 <div class="col-12">
                   <h3 class="TsHeading-05">Terms</h3>
@@ -173,14 +174,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-6 my-4 col-md-0">
               <span
                 ><img src="./icon/icon_mastercard_rjsrfx.svg" alt=""
               /></span>
               <span> In partnership with AXA™ Insurance </span>
             </div>
           </div>
-          <div class="row align-items-center">
+          <div class="row align-items-center my-5 my-md-0">
             <div class="col-12 col-md-6 pb-4 pb-md-0">
               <p class="TsDesc-04 m-0 text-center text-md-start">
                 © 2022 Fixter Limited • All rights reserved • Company No.
@@ -206,7 +207,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <div
         class="height"
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
