--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
             <div class="col-lg-3 col-sm-6 my-4 col-md-0">
               <span
-                ><img src="./icon/icon_mastercard_rjsrfx.svg" alt=""
+                ><img src="./icon/logo_axa-small_ye3qyt.webp" alt=""
               /></span>
               <span> In partnership with AXA™ Insurance </span>
             </div>
